# fuzzysearch

./: .gitmodules  CMakeLists.txt  README.TXT  build.sh  list.c  list.h  main.c  metric.c  metric.h  tagfile.c  tagfile.h
test/: CMakeLists.txt  test_tagfile.c
